syntax = "proto3";

package apartment_v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package = "service/pkg/grpc/apartment_v1";

message Apartment {
  int64 id = 1;
  string title = 2;
  int64 expenses = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
}

service ApartmentService {
  rpc NewApartment(NewApartmentRequest) returns (NewApartmentResponse) {
    option (google.api.http) = {
      post: "/v1/apartments"
      body: "*"
    };
  }
  rpc UpdateApartment(UpdateApartmentRequest) returns (UpdateApartmentResponse) {
    option (google.api.http) = {
      put: "/v1/apartments/{id}"
      body: "*"
    };
  }
  rpc RemoveApartment(RemoveApartmentRequest) returns (RemoveApartmentResponse) {
    option (google.api.http) = {
      delete: "/v1/apartments/{id}"
    };
  }
}

message NewApartmentRequest {
  string title = 1;
  int64 expenses = 2;
}

message NewApartmentResponse {
  apartment_v1.Apartment apartment = 1;
}

message UpdateApartmentRequest {
  int64 id = 1;
  string title = 2;
  int64 expenses = 3;
  string status = 4;
}

message UpdateApartmentResponse {
  apartment_v1.Apartment apartment = 1;
}

message RemoveApartmentRequest {
  int64 id = 1;
}

message RemoveApartmentResponse {
  bool success = 1;
}